# uqal-modules

./: LICENSE  README.md  SECURITY.md  cliff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  new_module.yml
.github/workflows/: publish-module.yml  validate-pr.yml
modules/community.postgis/: __init__.py  grammar_extension.lark  module.json  nodes.py  pyproject.toml
modules/community.postgis/community_postgis/: __init__.py  module.py  native_validator.py  translator.py
modules/community.postgis/docs/: index.md  syntax.md
modules/community.postgis/tests/grammar/: test_grammar.py
modules/community.postgis/tests/unit/: test_translator.py  test_validator.py
