[project]
name = "uqal-postgis"
version = "0.1.0"
description = "PostGIS extension for UQAL standard.postgresql"
requires-python = ">=3.12"
dependencies = [
    "uqal-core>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["community_postgis"]

[project.entry-points."uqal.modules"]
"community.postgis" = "community_postgis.module:PostGISExtension"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
